Add head content main sidebar footer to index and blog_post

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-
+    <div id="all" class="container box">
+        <div id="head" class="box">        
+        </div>
+        <div id="main" class="box">
+        </div>
+        <div id="sidebar" class="box">
+        </div>
+        <div id="footer" class="box">
+        </div>
+    </div>
 </body>
 </html>
