--- a/blog_post.html
+++ b/blog_post.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="css/post.css">
 </head>
 <body>
-
-
+    <div id="all" class="container box">
+        <div id="head" class="box">
+        </div>
+        <div id="content" class="box"> 
+        </div>
+        <div id="sidebar" class="box">
+        </div>
+        <div id="footer" class="box">
+        </div>
+    </div>
 </body>
 </html>
