--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 <body>
     <div id="all" class="container box">
-        <div id="head" class="box">        
+        <div id="head" class="box">
+            <h1>Wellcome to my Blog</h1>
         </div>
         <div id="main" class="box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Diam maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
         </div>
         <div id="sidebar" class="box">
+            <ul>
+                <li><a href="/blog_post.html"></a></li>
+            </ul>
         </div>
         <div id="footer" class="box">
+            <a href="index.html">HOME</a>
         </div>
     </div>
 </body>
