Add link text for my first post to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div id="sidebar" class="box">
             <ul>
-                <li><a href="/blog_post.html"></a></li>
+                <li><a href="/blog_post.html">My first post</a></li>
             </ul>
         </div>
         <div id="footer" class="box">
