Add first text to blog_post.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Wellcome to my Blog</h1>
         </div>
         <div id="main" class="box">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Blandit turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Diam maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
         </div>
         <div id="sidebar" class="box">
             <ul>
