Rename head -> nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="all" class="container box">
-        <div id="head" class="box">
+        <div id="nav" class="box">
             <h1>Wellcome to my Blog</h1>
         </div>
         <div id="main" class="box">
