Rename main -> post_card, delete sidebar in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
         <div id="nav" class="box">
             <h1>Wellcome to my Blog</h1>
         </div>
-        <div id="main" class="box">
+        <div id="post_card" class="box">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
-        </div>
-        <div id="sidebar" class="box">
-            <ul>
-                <li><a href="blog_post.html">My first post</a></li>
-            </ul>
         </div>
         <div id="footer" class="box">
             <a href="index.html">HOME</a>
