Rename sidebar -> autor_info, footer -> social in blog_post.html and post.css

--- a/blog_post.html
+++ b/blog_post.html
@@ -10,17 +10,22 @@
     <div id="all" class="container box">
         <div id="head" class="box">
             <h1>This is my first post here!</h1>
-        </div>
-        <div id="content" class="box">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
-        </div>
-        <div id="sidebar" class="box">
             <ul>
                 <li><a href="blog_post.html">My first post</a></li>
             </ul>
-        </div>
-        <div id="footer" class="box">
             <a href="index.html">HOME</a>
+        </div>
+
+        <div id="autor_info" class="box">
+            <h2>My Name</h2>
+        </div>
+
+        <div id="content" class="box">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
+        </div>
+
+        <div id="social" class="box">
+            <a href="https://www.facebook.com/">FACEBOOK</a>
         </div>
     </div>
 </body>
