fix typo autor -> author in blog_post.html and post.css

--- a/blog_post.html
+++ b/blog_post.html
@@ -16,7 +16,7 @@
             <a href="index.html">HOME</a>
         </div>
 
-        <div id="autor_info" class="box">
+        <div id="author_info" class="box">
             <h2>My Name</h2>
         </div>
 
