fix links from home to post and back

--- a/blog_post.html
+++ b/blog_post.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div id="all" class="container box">
+
         <div id="head" class="box">
             <h1>This is my first post here!</h1>
             <ul>
-                <li><a href="blog_post.html">My first post</a></li>
+                <li><a href="index.html">HOME</a></li>
             </ul>
-            <a href="index.html">HOME</a>
         </div>
 
         <div id="author_info" class="box">
@@ -27,6 +27,7 @@
         <div id="social" class="box">
             <a href="https://www.facebook.com/">FACEBOOK</a>
         </div>
+        
     </div>
 </body>
 </html>
