--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <div id="all" class="container box">
-        <div id="nav" class="box">
+
+        <nav id="nav" class="box">
             <h1>Wellcome to my Blog</h1>
-        </div>
-        <div id="post_card" class="box">
+        </nav>
+
+        <article id="post_card" class="box">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
             <a href="blog_post.html">Go to Post</a>
-        </div>
-        <div id="footer" class="box">
+        </article>
+
+        <footer id="footer" class="box">
             <a href="index.html">HOME</a>
-        </div>
+        </footer>
+
     </div>
+
 </body>
 </html>
