switch to semantic elements in blog_post.html

--- a/blog_post.html
+++ b/blog_post.html
@@ -7,27 +7,29 @@
     <link rel="stylesheet" href="css/post.css">
 </head>
 <body>
+
     <div id="all" class="container box">
 
-        <div id="head" class="box">
+        <header id="head" class="box">
             <h1>This is my first post here!</h1>
             <ul>
                 <li><a href="index.html">HOME</a></li>
             </ul>
-        </div>
+        </header>
 
-        <div id="author_info" class="box">
+        <aside id="author_info" class="box">
             <h2>My Name</h2>
-        </div>
+        </aside>
 
-        <div id="content" class="box">
+        <main id="content" class="box">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
-        </div>
+        </main>
 
-        <div id="social" class="box">
+        <footer id="social" class="box">
             <a href="https://www.facebook.com/">FACEBOOK</a>
-        </div>
-        
+        </footer>
+
     </div>
+
 </body>
 </html>
