add post_card with img and style to index.html

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
 
-    <div id="all" class="container box">
+    <div id="all" class="container">
 
         <nav id="nav" class="box">
             <h1>Wellcome to my Blog</h1>
         </nav>
 
         <article id="post_card" class="box">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
-            <a href="blog_post.html">Go to Post</a>
+            <figure id="card_figure">
+                <figcaption id="card_caption">My travel to "The Lake"</figcaption>
+                <img src="img/lake1.jpg" alt="Picture of Lake" id="lake1" class="image">
+            </figure>
+            <button id="post_link"  class="button"><a href="blog_post.html">Go to Post</a></button>
         </article>
 
         <footer id="footer" class="box">
