add navbar in top of page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 
     <div id="all" class="container">
 
-        <nav id="nav" class="box">
+        <nav id="navi" class="box">
             <h1>Wellcome to my Blog</h1>
+            <ul>
+                <li><a href="blog_post.html">first post</a></li>
+                <li><a href="blog_post.html">last post</a></li>
+            </ul>
+            <a href="index.html">HOME</a>
         </nav>
 
         <article id="post_card" class="box">
