add social/footer in bottom of page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </article>
 
         <footer id="footer" class="box">
-            <a href="index.html">HOME</a>
+            <a href="https://www.facebook.com/">FACEBOOK</a>
+            <a href="https://www.twitter.com/">TWITTER</a>
+            <a href="https://www.linkedin.com/">LINKEDIN</a>
         </footer>
 
     </div>
