rename id of footer to social_links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button id="post_link"  class="button"><a href="blog_post.html">Go to Post</a></button>
         </article>
 
-        <footer id="footer" class="box">
+        <footer id="social_links" class="box">
             <a href="https://www.facebook.com/">FACEBOOK</a>
             <a href="https://www.twitter.com/">TWITTER</a>
             <a href="https://www.linkedin.com/">LINKEDIN</a>
