set header style and content + add bio and content headings

--- a/blog_post.html
+++ b/blog_post.html
@@ -12,16 +12,15 @@
 
         <header id="head" class="box">
             <h1>This is my first post here!</h1>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-            </ul>
+            <a href="index.html">HOME</a>
         </header>
 
         <aside id="author_info" class="box">
-            <h2>My Name</h2>
+            <h2>Bio</h2>
         </aside>
 
         <main id="content" class="box">
+            <h3>My travel to "The Lake"</h3>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
         </main>
 
