set grid heading row to 150px + set social footer in blogpost

--- a/blog_post.html
+++ b/blog_post.html
@@ -24,8 +24,10 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
         </main>
 
-        <footer id="social" class="box">
+        <footer id="social_links" class="box">
             <a href="https://www.facebook.com/">FACEBOOK</a>
+            <a href="https://www.twitter.com/">TWITTER</a>
+            <a href="https://www.linkedin.com/">LINKEDIN</a>
         </footer>
 
     </div>
