add Author info

--- a/blog_post.html
+++ b/blog_post.html
@@ -16,7 +16,14 @@
         </header>
 
         <aside id="author_info" class="box">
-            <h2>Bio</h2>
+            <h2 id="biohead">Bio</h2>
+            <img src="img/avatar.png" alt="Picture of me" id="avatar" class="image">
+            <ul id="biolist">
+                <li>Peter Funny</li>
+                <li>33 years old</li>
+                <li>School of Life</li>
+                <li>Hi im Peter Funny and I like to travel, <br>take pictures and make websites!</li>
+            </ul>
         </aside>
 
         <main id="content" class="box">
