add main blog content and background image

--- a/blog_post.html
+++ b/blog_post.html
@@ -15,10 +15,10 @@
             <a href="index.html">HOME</a>
         </header>
 
-        <aside id="author_info" class="box">
-            <h2 id="biohead">Bio</h2>
+        <aside id="authorInfo" class="box">
+            <h2 id="bioHead">Bio</h2>
             <img src="img/avatar.png" alt="Picture of me" id="avatar" class="image">
-            <ul id="biolist">
+            <ul id="bioList">
                 <li>Peter Funny</li>
                 <li>33 years old</li>
                 <li>School of Life</li>
@@ -26,9 +26,9 @@
             </ul>
         </aside>
 
-        <main id="content" class="box">
+        <main id="content" class="box photoBox">
             <h3>My travel to "The Lake"</h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.</p>
         </main>
 
         <footer id="social_links" class="box">
