--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <a href="index.html">HOME</a>
         </nav>
 
-        <article id="post_card" class="box">
-            <figure id="card_figure">
-                <figcaption id="card_caption">My travel to "The Lake"</figcaption>
+        <article id="postCard" class="box">
+            <figure id="cardFigure">
+                <figcaption id="cardCaption">My travel to "The Lake"</figcaption>
                 <img src="img/lake1.jpg" alt="Picture of Lake" id="lake1" class="image">
             </figure>
-            <button id="post_link"  class="button"><a href="blog_post.html">Go to Post</a></button>
+            <button id="postLink"  class="button"><a href="blog_post.html">Go to Post</a></button>
         </article>
 
-        <footer id="social_links" class="box">
+        <footer id="socialLinks" class="box">
             <a href="https://www.facebook.com/">FACEBOOK</a>
             <a href="https://www.twitter.com/">TWITTER</a>
             <a href="https://www.linkedin.com/">LINKEDIN</a>
