--- a/blog_post.html
+++ b/blog_post.html
@@ -31,7 +31,7 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.</p>
         </main>
 
-        <footer id="social_links" class="box">
+        <footer id="socialLinks" class="box">
             <a href="https://www.facebook.com/">FACEBOOK</a>
             <a href="https://www.twitter.com/">TWITTER</a>
             <a href="https://www.linkedin.com/">LINKEDIN</a>
