add media break-points from 501px-900px width

--- a/blog_post.html
+++ b/blog_post.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="all" class="container box">
+    <div id="all" class="container">
 
         <header id="head" class="box">
             <h1>This is my first post here!</h1>
