add font styles h1 and links

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div id="all" class="container">
 
         <nav id="navi" class="box">
-            <h1>Wellcome to my Blog</h1>
+            <h1 class="mainHeading">Wellcome to my Blog</h1>
             <ul>
-                <li><a href="blog_post.html">first post</a></li>
-                <li><a href="blog_post.html">last post</a></li>
+                <li><a href="blog_post.html" class="link">first post</a></li>
+                <li><a href="blog_post.html" class="link">last post</a></li>
             </ul>
-            <a href="index.html">HOME</a>
+            <a href="index.html" class="link">HOME</a>
         </nav>
 
         <article id="postCard" class="box">
@@ -24,13 +24,13 @@
                 <figcaption id="cardCaption">My travel to "The Lake"</figcaption>
                 <img src="img/lake1.jpg" alt="Picture of Lake" id="lake1" class="image">
             </figure>
-            <button id="postLink"  class="button"><a href="blog_post.html">Go to Post</a></button>
+            <button id="postLink"  class="button"><a href="blog_post.html" class="link">Go to Post</a></button>
         </article>
 
         <footer id="socialLinks" class="box">
-            <a href="https://www.facebook.com/">FACEBOOK</a>
-            <a href="https://www.twitter.com/">TWITTER</a>
-            <a href="https://www.linkedin.com/">LINKEDIN</a>
+            <a href="https://www.facebook.com/" class="link">FACEBOOK</a>
+            <a href="https://www.twitter.com/" class="link">TWITTER</a>
+            <a href="https://www.linkedin.com/" class="link">LINKEDIN</a>
         </footer>
 
     </div>
