add font styles for post

--- a/blog_post.html
+++ b/blog_post.html
@@ -11,30 +11,30 @@
     <div id="all" class="container">
 
         <header id="head" class="box">
-            <h1>This is my first post here!</h1>
-            <a href="index.html">HOME</a>
+            <h1 class="mainHeading">This is my first post here!</h1>
+            <a href="index.html" class="link">HOME</a>
         </header>
 
         <aside id="authorInfo" class="box">
             <h2 id="bioHead">Bio</h2>
             <img src="img/avatar.png" alt="Picture of me" id="avatar" class="image">
             <ul id="bioList">
-                <li>Peter Funny</li>
-                <li>33 years old</li>
-                <li>School of Life</li>
-                <li>Hi im Peter Funny and I like to travel, <br>take pictures and make websites!</li>
+                <li class="item">Peter Funny</li>
+                <li class="item">33 years old</li>
+                <li class="item">School of Life</li>
+                <li class="item">Hi im Peter Funny and I like to travel, <br>take pictures and make websites!</li>
             </ul>
         </aside>
 
         <main id="content" class="box photoBox">
-            <h3>My travel to "The Lake"</h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.</p>
+            <h3 class="postheading">My travel to "The Lake"</h3>
+            <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.</p>
         </main>
 
         <footer id="socialLinks" class="box">
-            <a href="https://www.facebook.com/">FACEBOOK</a>
-            <a href="https://www.twitter.com/">TWITTER</a>
-            <a href="https://www.linkedin.com/">LINKEDIN</a>
+            <a href="https://www.facebook.com/" class="link">FACEBOOK</a>
+            <a href="https://www.twitter.com/" class="link">TWITTER</a>
+            <a href="https://www.linkedin.com/" class="link">LINKEDIN</a>
         </footer>
 
     </div>
