change colors in post.css

--- a/blog_post.html
+++ b/blog_post.html
@@ -22,7 +22,7 @@
                 <li class="item">Peter Funny</li>
                 <li class="item">33 years old</li>
                 <li class="item">School of Life</li>
-                <li class="item">Hi im Peter Funny and I like to travel, <br>take pictures and make websites!</li>
+                <li class="item">Hi im Peter Funny and I like to travel, take pictures and make websites!</li>
             </ul>
         </aside>
 
