add viewport and required properties in paragraph

--- a/blog_post.html
+++ b/blog_post.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Blog Post</title>
     <meta name="description" content="post page">
     <link rel="stylesheet" href="css/post.css">
+    <link rel="stylesheet" href="css/post_medium.css">
+    <link rel="stylesheet" href="css/post_big.css">
+    <link rel="stylesheet" href="css/link_style.css">
 </head>
 <body>
 
@@ -28,7 +32,7 @@
 
         <main id="content" class="box photoBox">
             <h3 class="postheading">My travel to "The Lake"</h3>
-            <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> turpis cursus in hac. Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <br> maecenas ultricies mi eget. Diam vulputate ut pharetra sit amet.</p>
+            <p class="text"><blockquote cite="https://de.wikipedia.org/wiki/Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,...</blockquote> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b> turpis cursus in hac.</b> Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <em>maecenas ultricies mi eget.</em> Diam vulputate ut pharetra <u>sit amet.</u></p>
         </main>
 
         <footer id="socialLinks" class="box">
