--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Blog Website</title>
     <meta name="description" content="main page">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_medium.css">
+    <link rel="stylesheet" href="css/style_big.css">
+    <link rel="stylesheet" href="css/link_style.css">
 </head>
 <body>
 
