regroup page because of @import problem

--- a/blog_post.html
+++ b/blog_post.html
@@ -28,7 +28,7 @@
         </aside>
 
         <main id="content" class="box photoBox">
-            <h3 class="postheading">My travel to "The Lake"</h3>
+            <h3 class="postheading">My trip to "The Lake"</h3>
             <p class="text"><blockquote cite="https://de.wikipedia.org/wiki/Lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,...</blockquote> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b> turpis cursus in hac.</b> Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in. <em>maecenas ultricies mi eget.</em> Diam vulputate ut pharetra <u>sit amet.</u></p>
         </main>
 
